--- a/hw12/Zadatak1/zadatak1.html
+++ b/hw12/Zadatak1/zadatak1.html
@@ -27,9 +27,9 @@ Kreirati zadatak1.html gde ce biti forma za unos ovih parametara a kod resavati 
 <body>
     <form action="zadatak1.php" method="GET">
         <label for="weight">Masa tela:</label>
-        <input type="number" id="weight" name="masa" maxlength="6" required/> kg<br><br>
+        <input type="number" id="weight" name="mass" maxlength="6" required/> kg<br><br>
         <label for="age">Godine:</label>
-        <input type="number" id="age" name="starost" maxlength="3" required/><br><br>
+        <input type="number" id="age" name="age" maxlength="3" required/><br><br>
         <select name="profession">
             <option value="programmer">Programer</option>
             <option value="admin">Administrativni radnik</option>
