--- a/hw11/register.html
+++ b/hw11/register.html
@@ -21,9 +21,9 @@
             <br>
             <span>Izaberite pol</span> <!--može label, može p-->
             <label for="male">Muški</label>
-            <input type="radio" id="male" name="gender" value="">
+            <input type="radio" id="male" name="gender" value="male">
             <label for="female">Ženski</label>
-            <input type="radio" id="female" name="gender"><br>*
+            <input type="radio" id="female" name="gender" value="female"><br>*
             <br>
             <label for="email">email adresa</label>
             <input type="email" id="email" name="email" required>*<br>
